--- a/MODULO_1/UNIDAD_2_JS/sorteo/styles.css
+++ b/MODULO_1/UNIDAD_2_JS/sorteo/styles.css
@@ -4,21 +4,25 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
-    background-color: #f9f9f9;
+    background-color: #ade9bc;
   }
   
   #container {
     text-align: center;
-    background-color: #fff;
+    background-color: #e3e0ee;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin: 20px;
-    width: 40%;
+    width: 50%;
   }
   
   h1 {
     margin-top: 0;
+    color: #07630e;
+  }
+
+  p {
     color: #333;
   }
   
@@ -41,10 +45,11 @@ body {
     font-size: 16px;
     margin: 10px;
     transition: background-color 0.3s;
+    cursor: pointer;
   }
   
   button:hover {
-    background-color: #45a049;
+    background-color: #09a010;
   }
   
   ul {
