--- a/pruebas personales/menu restaurante/styles.css
+++ b/pruebas personales/menu restaurante/styles.css
@@ -1,33 +1,73 @@
+* {
+    margin: 0;
+    padding: 0;
+  }
 body {
-    background-color: aquamarine;
-}
-header {
+    background-color: rgb(212, 221, 218);
+    background-image: url("img/fondo_cubiertos.jpg");
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+header {    
+    flex-direction: column;
     align-items: center;
+    width: 100vw;
     height: 10vh;
-    padding: 20px;
-    background-color: aqua;
+    padding: 25px;
+    background-color: rgb(103, 107, 107);
+    color: white;
+    margin-right: 20px;
+}
+header h2 {
+    color: black;
 }
 nav {
-    background-color: rgb(93, 133, 192);
-    padding: 20px;
+    background-color: rgb(175, 178, 182);
+    padding: 10px;
+    width: 100vw;
 }
 nav > a {
     text-decoration: none;
     color: white;
-    margin-right: 20px;
+    margin: 20px;
 }
 nav a:hover {
-    color: blue;
+    color: rgb(57, 57, 59);
+}
+main {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    /*align-items: center;
+    justify-content: center;*/
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 30px;
 }
 #lista {
     font-size: x-large;
     color: blue;
 }
 button {
-    background-color: aqua;
-    color: red;
+    background-color: rgb(175, 178, 182);
+    color: white;
     padding: 10px;
     border-radius: 5px;
+    cursor: pointer;
 }
+button:hover {
+    color: rgb(34, 32, 32);
+}
+footer {
+    width: 100%;
+    background-color: rgb(103, 107, 107);
+    padding: 10px 0;
+    text-align: center;
+  
+  }
